--- a/index.html
+++ b/index.html
@@ -3,27 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="/script.js" defer></script>
     <title>funcoes</title>
 </head>
 <body>
     <h1>Funções</h1>
-    <h2>Multiplicar Números</h2>
-    
-    <p>
-        Número 1:
-        <input type="number">
-        <label for=""></label>
-    </p>
-    <p>
-        Número 2:
-        <input type="number">
-        <label for=""></label>
-    </p>
-    <p>
-        Número 3:
-        <input type="number">
-        <label for=""></label>
-    </p>
-    <button>Calcular</button>
-</body>
+  
+    <section class="somar">
+      <form action="">
+        <h2>Somar Números</h2>
+        <div class="input-box">
+          <label for="numero-1">Número 1:</label>
+          <input type="number" id="numero-1">
+        </div>
+
+        <div class="input-box">
+          <label for="numero-2">Número 2:</label>
+          <input type="number" id="numero-2">
+        </div>
+
+        <div class="input-box">
+            <label for="numero-3">Número 3:</label>
+            <input type="number" id="numero-3">
+          </div>
+      </form>
+      
+      <button>Calcular</button>
+  
+      <p class="resultado"></p>
+    </section>
+  </body>
 </html>
